--- a/alert_rules/redis.yaml
+++ b/alert_rules/redis.yaml
@@ -1,5 +1,5 @@
 groups:
-  - name: Redis
+  - name: redis monitoring
     rules:
       - alert: RedisDown
         expr: redis_up == 0
@@ -10,7 +10,7 @@ groups:
           summary: "Redis down (instance {{ $labels.instance }})"
           description: "Redis instance is down\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
       - alert: RedisMissingMaster
-        expr: count(redis_instance_info{role="master"}) == 0
+        expr: count by (instance) (redis_instance_info{role="master"}) == 0
         for: 10s
         labels:
           severity: critical
