--- a/alert_rules/app.yaml
+++ b/alert_rules/app.yaml
@@ -10,37 +10,13 @@ groups:
           summary: "Prometheus target missing (instance {{ $labels.instance }})"
           description: "A Prometheus target has disappeared. An exporter might be crashed.\n  VALUE = {{ $value }}\n  LABELS: {{ $labels.$instance }}"
       - alert: TooManyHTTPStatusCode500
-        expr: rate(flask_request_count_total{http_status="500"}[1m]) * 100 > 5
-        for: 1m
+        expr: increase(flask_request_count_total{http_status="500"}[10s]) > 0
+        for: 10s
         labels:
           severity: critical
         annotations:
           summary: "TooManyHTTPStatusCode500 (instance {{ $labels.instance }})"
           description: "TooManyHTTPStatusCode500 >5\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
-      - alert: HostHighCpuLoad
-        expr: 100 - (avg by(instance) (irate(process_cpu_seconds_total[5m])) * 100) > 80
-        for: 5m
-        labels:
-          severity: critical
-        annotations:
-          summary: "Host high CPU load (instance {{ $labels.instance }})"
-          description: "CPU load is > 80%\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
-      - alert: ContainerMemoryUsage
-        expr: (sum(process_virtual_memory_bytes) BY (instance, name) / sum(process_resident_memory_bytes) BY (instance, name) * 100) > 80
-        for: 5m
-        labels:
-          severity: critical
-        annotations:
-          summary: "Container Memory usage (instance {{ $labels.instance }})"
-          description: "Container Memory usage is above 80%\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
-      - alert: ContainerCpuUsage
-        expr: (sum(rate(process_cpu_seconds_total[3m])) BY (instance, name) * 100) > 80
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "Container CPU usage (instance {{ $labels.instance }})"
-          description: "Container CPU usage is above 80%\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
       - alert: TooManyHTTPStatusCode404
         expr: rate(flask_request_count_total{http_status="404"}[1m]) * 100 > 5
         for: 1m
@@ -57,11 +33,3 @@ groups:
         annotations:
           summary: "TooManyHTTPStatusCode401 (instance {{ $labels.instance }})"
           description: "TooManyHTTPStatusCode401 >5\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
-      - alert: HostOutOfMemory
-        expr: process_resident_memory_bytes / process_virtual_memory_bytes * 100 < 10
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "Host out of memory (instance {{ $labels.instance }})"
-          description: "Node memory is filling up (< 10% left)\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
