--- a/alert_rules/redis.yaml
+++ b/alert_rules/redis.yaml
@@ -25,6 +25,14 @@ groups:
         annotations:
           summary: "Redis too many masters (instance {{ $labels.instance }})"
           description: "Redis cluster has too many nodes marked as master.\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+      - alert: RedisReplicationBroken
+        expr: delta(redis_connected_slaves[1m]) < 0
+        for: 1m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Redis replication broken (instance {{ $labels.instance }})"
+          description: "Redis instance lost a slave\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
       - alert: RedisDisconnectedSlaves
         expr: count without (instance, job) (redis_connected_slaves) - sum without (instance, job) (redis_connected_slaves) - 1 > 1
         for: 10s
